<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiveTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textMultiLine"
        android:text="@string/welcome_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <ImageView
        android:id="@+id/ivthumbUp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/ivThumbDown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLiveTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvLiveTitle"
        app:srcCompat="@mipmap/ic_thumb_up_black_48dp" />

    <ImageView
        android:id="@+id/ivThumbDown"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivthumbUp"
        app:layout_constraintTop_toBottomOf="@+id/tvLiveTitle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_thumb_down_black_48dp" />

    <TextView
        android:id="@+id/tvWatching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="1"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/tvWatchingLabel"
        app:layout_constraintStart_toStartOf="@+id/tvWatchingLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvWatchingLabel" />

    <TextView
        android:id="@+id/tvWatchingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/label_watching"
        app:layout_constraintBottom_toBottomOf="@+id/ivThumbDown"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/ivthumbUp"
        app:layout_constraintStart_toStartOf="@+id/ivthumbUp"
        app:layout_constraintTop_toBottomOf="@+id/ivthumbUp" />

    <TextView
        android:id="@+id/tvDislikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/ivThumbDown"
        app:layout_constraintStart_toStartOf="@+id/ivThumbDown"
        app:layout_constraintTop_toBottomOf="@+id/ivThumbDown" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvComments"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvWatchingLabel"
        app:layout_constraintStart_toStartOf="@+id/ivthumbUp"
        app:layout_constraintTop_toBottomOf="@+id/tvDislikes">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toTopOf="@+id/videoView" />
</android.support.constraint.ConstraintLayout>
</ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_weight="1"
        android:id="@+id/etComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:ems="10"
        android:padding="@dimen/small_margin"
        android:hint="@string/comment_hint"
        android:inputType="text|textCapSentences"/>

    <ImageView
        android:id="@+id/ivSend"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/ic_send_black_48dp"
        android:text="@string/send"
        android:textAllCaps="true"
        android:tint="@color/colorPrimaryDark"
        android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>